fix overflow

--- a/src/components/Block/Block.module.css
+++ b/src/components/Block/Block.module.css
@@ -7,6 +7,7 @@
   width: 330px;
   overflow: auto;
   flex: 1;
+  z-index: 1;
 }
 
 h1 {
